# Channel/Entity/ChannelEntity.go
@@ -11,14 +11,14 @@ type Info struct {
 }
 
 type Channel struct {
-	TwitterAccount string `json:"twitterAccount"`
-	Name           string `json:"name"`
-	Avatar         string `json:"avatar"`
-	Company        string `json:"company"`
-	Unit           string `json:"unit"`
-	ChannelUrl     string `json:"channelUrl"`
-	Birthday       string `json:"birthday"`
-	Height         string `json:"height"`
-	DebutDate      string `json:"debutDate"`
-	Info           Info   `json:"info"`
+	TwitterAccount string  `json:"twitterAccount"`
+	Name           string  `json:"name"`
+	Avatar         string  `json:"avatar"`
+	Company        string  `json:"company"`
+	Unit           string  `json:"unit"`
+	ChannelUrl     string  `json:"channelUrl"`
+	Birthday       string  `json:"birthday"`
+	Height         float64 `json:"height"`
+	DebutDate      string  `json:"debutDate"`
+	Info           Info    `json:"info"`
 }
