# docs/swagger.json
@@ -60,7 +60,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/ChannelEntity.Channel"
                         }
                     },
                     "404": {
@@ -69,6 +69,65 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "ChannelEntity.Channel": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "birthday": {
+                    "type": "string"
+                },
+                "channelUrl": {
+                    "type": "string"
+                },
+                "company": {
+                    "type": "string"
+                },
+                "debutDate": {
+                    "type": "string"
+                },
+                "height": {
+                    "type": "number"
+                },
+                "info": {
+                    "$ref": "#/definitions/ChannelEntity.Info"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "twitterAccount": {
+                    "type": "string"
+                },
+                "unit": {
+                    "type": "string"
+                }
+            }
+        },
+        "ChannelEntity.Hashtag": {
+            "type": "object",
+            "properties": {
+                "fanArt": {
+                    "type": "string"
+                },
+                "streamTag": {
+                    "type": "string"
+                }
+            }
+        },
+        "ChannelEntity.Info": {
+            "type": "object",
+            "properties": {
+                "fanName": {
+                    "type": "string"
+                },
+                "hashtags": {
+                    "$ref": "#/definitions/ChannelEntity.Hashtag"
                 }
             }
         }
